--- a/package.json
+++ b/package.json
@@ -48,9 +48,15 @@
     "@rollup/plugin-typescript": "^8.2.1",
     "@types/edit-json-file": "^1.4.0",
     "@types/which-pm-runs": "^1.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.27.0",
+    "@typescript-eslint/parser": "^4.27.0",
     "earljs": "^0.1.10",
     "esbuild-node-loader": "^0.1.1",
+    "eslint": "^7.29.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
     "esmo": "^0.7.3",
+    "prettier": "^2.3.1",
     "rollup": "^2.52.1",
     "typescript": "^4.3.4",
     "uvu": "^0.5.1"
