--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,5 +61,10 @@ jobs:
       - name: run tests
         run: pnpm test
 
-      - name: Collect coverage
-        uses: codecov/codecov-action@v1.5.0
+      - run: pnpm install
+      - run: pnpm test:coverage
+      - run: pnpm test:report
+      - name: collect coverage
+        uses: codacy/codacy-coverage-reporter-action@v1
+        with:
+          project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
