--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
   },
   "scripts": {
     "build": "rollup -c",
-    "test": "esmo node_modules/uvu/bin.js",
+    "test": "node --experimental-loader esbuild-node-loader node_modules/uvu/bin.js",
+    "test:coverage": "c8 --include=src pnpm test",
+    "test:report": "c8 report --reporter=text-lcov > coverage.lcov",
     "lint": "eslint . --ext=ts",
     "format": "prettier --check \"./**/*.{ts}\""
   },
@@ -57,7 +59,6 @@
     "eslint": "^7.29.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
-    "esmo": "^0.7.3",
     "prettier": "^2.3.1",
     "rollup": "^2.52.1",
     "typescript": "^4.3.4",
