--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,26 +25,26 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      # - name: setup caching
-      #   uses: actions/cache@v2
-      #   with:
-      #     path: ${{ env.PNPM_CACHE_FOLDER }}
-      #     key: ${{ runner.os }}-pnpm-${{ hashFiles('**/pnpm-lock.yaml') }}
-      #     restore-keys: |
-      #       ${{ runner.os }}-pnpm-
+      - name: setup caching
+        uses: actions/cache@v2
+        with:
+          path: ${{ env.PNPM_CACHE_FOLDER }}
+          key: ${{ runner.os }}-pnpm-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-
 
       - name: Setup Node.js environment
         uses: actions/setup-node@v2
         with:
-          node-version: 12.17
+          node-version: 14
 
       - name: install pnpm
         uses: pnpm/action-setup@v2.0.1
         with:
           version: 6.7.6
 
-      # - name: setup pnpm config
-      #   run: pnpm config set store-dir $PNPM_CACHE_FOLDER
+      - name: setup pnpm config
+        run: pnpm config set store-dir $PNPM_CACHE_FOLDER
 
       - name: install dependencies
         run: pnpm install
