add report file path

--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   },
   "scripts": {
     "build": "rollup -c",
-    "test": "node --experimental-loader esbuild-node-loader node_modules/uvu/bin.js",
+    "test": "node --experimental-loader esbuild-node-loader node_modules/uvu/bin.js tests",
     "test:coverage": "c8 --include=src pnpm test",
     "test:report": "c8 report --reporter=text-lcov > coverage.lcov",
     "lint": "eslint . --ext=ts",
