--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -68,3 +68,4 @@ jobs:
         uses: coverallsapp/github-action@master
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
+          path-to-lcov: ./coverage.lcov
