--- a/package.json
+++ b/package.json
@@ -36,31 +36,35 @@
     "colorette": "^2.0.20",
     "edit-json-file": "^1.7.0",
     "ora": "^7.0.1",
-    "undici": "^5.23.0",
     "which-pm-runs": "^1.1.0"
   },
   "scripts": {
-    "build": "esbuild src/index.ts --outdir=dist --platform=node --target=node18 --format=esm --packages=external --bundle",
-    "test": "uvu -r tsm tests",
-    "test:coverage": "c8 --include=src pnpm test",
-    "test:report": "c8 report --reporter=text-lcov > coverage.lcov",
+    "build": "tsc -p tsconfig.build.json",
+    "test": "tsx tests/index.test.ts",
+    "test:coverage": "c8 tsx --test tests/index.test.ts",
+    "test:report": "c8 report --reporter=text-lcov > lcov.info",
     "lint": "eslint . --ext=ts",
-    "format": "prettier --check \"./**/*.ts\""
+    "format": "prettier --check \"./**/*.{ts,md}\"",
+    "format:fix": "prettier --write \"./**/*.{ts,md}\"",
+    "prepare": "husky install"
   },
   "devDependencies": {
-    "@types/edit-json-file": "^1.7.0",
-    "@types/node": "^20.5.0",
-    "@types/which-pm-runs": "^1.0.0",
-    "@typescript-eslint/eslint-plugin": "^6.4.0",
-    "@typescript-eslint/parser": "^6.4.0",
+    "@commitlint/cli": "^18.2.0",
+    "@commitlint/config-conventional": "^18.1.0",
+    "@types/edit-json-file": "^1.7.2",
+    "@types/node": "^20.8.9",
+    "@types/which-pm-runs": "^1.0.1",
+    "@typescript-eslint/eslint-plugin": "^6.9.0",
+    "@typescript-eslint/parser": "^6.9.0",
+    "bun-types": "^1.0.7",
     "c8": "^8.0.1",
-    "esbuild": "^0.19.2",
-    "eslint": "^8.47.0",
+    "eslint": "^8.52.0",
     "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.0",
-    "prettier": "^3.0.2",
-    "tsm": "^2.3.0",
-    "typescript": "^5.1.6",
-    "uvu": "^0.5.6"
+    "eslint-plugin-prettier": "^5.0.1",
+    "husky": "^8.0.3",
+    "prettier": "^3.0.3",
+    "supertest-fetch": "^1.5.0",
+    "tsx": "^3.14.0",
+    "typescript": "^5.2.2"
   }
 }
