chore: go back to node:test until bun supports coverage

--- a/package.json
+++ b/package.json
@@ -40,8 +40,8 @@
   },
   "scripts": {
     "build": "tsc -p tsconfig.build.json",
-    "test": "tsx tests/index.test.ts",
-    "test:coverage": "c8 tsx --test tests/index.test.ts",
+    "test": "tsx tests/*.test.ts",
+    "test:coverage": "c8 tsx --test tests/*.test.ts",
     "test:report": "c8 report --reporter=text-lcov > lcov.info",
     "lint": "eslint . --ext=ts",
     "format": "prettier --check \"./**/*.{ts,md}\"",
