fix #2 (by properly saving file and also setting correct permissions)

--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "lint": "eslint . --ext=ts",
     "format": "prettier --check \"./**/*.{ts,md}\"",
     "format:fix": "prettier --write \"./**/*.{ts,md}\"",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "postbuild": "chmod +x dist/index.js"
   },
   "devDependencies": {
     "@commitlint/cli": "^18.2.0",
